# REX-3-Theb-Scraper

./: .gitignore  Cargo.toml  adjusted.txt  cave_ores.json  cave_ores.json.save  chexmix.json  color_names.json  endless.json  event_tracker.py  events.txt  exclusive.txt  gooberville.json  heartbeat.py  index.json  info.json  item_manager.py  main.py  nohup.out  otherworldly.txt  pyproject.toml  refuge.json  requirements.txt  scoville_names.json  socket_based.py  theb_names.json  zetex_jr.py  zetex_names.json
core/: database.py
core/discord/bot/: bot.py  track_msg.py  util.py
core/discord/bot/cogs/: add.py  epinephrine.py  force_register.py  index.py  leaderboard.py  manual.py  player.py  register.py  remove.py  set.py  setup.py  subscribe.py  sync.py
core/discord/scraper/: client.py  runner.py
core/discord/scraper/runners/: heartbeat.py  scraper.py
core/types/: manager.py  meta.py
core/types/managers/: ability.py  cave.py  channel.py  equipment.py  event.py  guild.py  layer.py  multiplier.py  ore.py  player.py  recipe.py  spawn.py  tier.py  track.py  tracker.py  variant.py  world.py
data/: create.sql  holiday.json
database/: database.py
misc/: create.sql
src/: bot.rs  core.rs  db.rs  main.rs  scraper.rs
src/bot/: commands.rs
src/bot/commands/: epinephrine.rs  index.rs
src/core/: game.rs  player.rs
src/core/game/: cave.rs  layer.rs  multiplier.rs  ore.rs  spawn.rs  tier.rs  variant.rs  world.rs
src/core/player/: player.rs  track.rs  tracker.rs
src/scraper/: senders.rs
src/scraper/senders/: heartbeat.rs  scraper.rs
(+3 files in other folders)
