[project]
name = "rex-discord-bot"
version = "0.1.0"
description = "A Discord bot for REx tracking and indexing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord-py>=2.6.3",
    "mypy>=1.18.2",
    "pillow>=11.3.0",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "types-psycopg2>=2.9.21.20250915",
    "websockets>=15.0.1",
]
